--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -20,8 +20,9 @@
     align-items: center;
     gap: 2rem;
     padding: 0 1rem;
-    width: 100%;
-    height: 50px;
+    width: 100vw;
+
+    height: 3rem;
   }
   
   .site-title {
@@ -52,8 +53,8 @@
 
   .nav input {
     padding: 0.4rem 0.8rem;
-    width: 700px;
-    border-radius: 4px;
+    width: 20rem;
+    border-radius: 10px;
     border: none;
     flex-direction: flex-start;
   }
@@ -61,7 +62,7 @@
   .nav form button {
     background-color: white;
     border: 2px solid white;
-    border-radius: 4px;
+    border-radius: 10px;
     color: #A87FF3;
     padding: 0.3rem;
     font-size: 1.3rem;
@@ -91,46 +92,4 @@
       border: none;
       flex-direction: flex-start;
     }
-    /*
-
-    .apresentação .text-apresentation{
-
-        width: 100%;
-    }
-
-    #quem-somos{
-
-        flex-direction: column-reverse;
-    }
-
-    #quem-somos{
-
-        min-width: 320px;
-        margin: auto;
-    }
-
-    .list-services{
-
-        flex-direction: column;
-    }
-
-    .item-service img{
-
-        width: 50%;
-        margin: auto;
-    }
-
-    .list-plans{
-
-        flex-direction: column;
-        align-items: flex-start;
-        margin-bottom: 20px;
-    }
-
-    .list-plans .plans-items{
-
-        max-width: 90%;
-        margin: auto;width: 100%;
-        margin-bottom: 20px;
-    }*/
 }
